responsive design update

--- a/css/main.css
+++ b/css/main.css
@@ -1,88 +1,106 @@
-html, body {
-    height: 100vh;
-    margin: 0;
-  }
-  
-  * {
-    box-sizing: border-box;
-    font-family: monaco;
-  }
-  
+* {
+  box-sizing: border-box;
+}
+
+body { 
+  margin: 0; 
+  padding: 50px;
+  font-family: monaco;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  overflow: visible;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: rgb(35, 190, 144); 
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: rgba(236, 54, 221, 0.658); 
+}
+
+h3 {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: rgba(98, 202, 141, 0.582);
+  color: gr 
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.square {
+  height: 15vh;
+  width: 15vh;
+  display: inline-block; 
+}
+
+.pink {
+  background-color: rgb(228, 135, 182);
+}
+.rust {
+  background-color: rgb(255, 94, 0);
+}
+.blue {
+  background-color: rgba(0, 195, 255, 0.274);
+}
+.green {
+  background-color: rgb(72, 167, 92);
+}
+.yellow {
+  background-color: rgba(255, 238, 0, 0.733);
+}
+.teal {
+  background-color: teal;
+}
+.orange {
+  background-color: orange;
+}
+.purple {
+  background-color: rgb(172, 47, 172);
+}
+
+.backside {
+  background-color: aliceblue;
+}
+
+button {
+  margin-top: 30px;
+  padding: 15px;
+  width: 250px;  
+  background-color: pink;
+  color: red;
+  border-color: red;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+button:hover {
+  background-color: red;
+  color: pink;
+}
+
+@media screen and (max-width: 750px) {
   body {
+    width: 100vh;
+    padding: 50px 0 50px 0;
+    font-family: monaco;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    overflow: visible;
   }
-  
-  h1 {
-    margin-top: 0;
-    margin-bottom: 50px;
-    color: rgb(35, 190, 144); 
-  }
-
-  h2 {
-    margin-top: 0;
-    margin-bottom: 50px;
-    color: rgba(236, 54, 221, 0.658); 
-  }
-
-  h3 {
-    margin-top: 0;
-    margin-bottom: 50px;
-    color: rgba(98, 202, 141, 0.582); 
-  }
-
-  .square {
-    height: 150px;
-    width: 150px;
-    display: inline-block; 
-    margin: 0;
-    padding: 90px;
-  }
-  
-.pink {
-    background-color: rgb(228, 135, 182);
 }
-.rust {
-    background-color: rgb(255, 94, 0);
-}
-.blue {
-    background-color: rgba(0, 195, 255, 0.274);
-}
-.green {
-    background-color: rgb(72, 167, 92);
-}
-.yellow {
-    background-color: rgba(255, 238, 0, 0.733);
-}
-.teal {
-    background-color: teal;
-}
-.orange {
-    background-color: orange;
-}
-.purple {
-    background-color: rgb(172, 47, 172);
-}
-
-.backside {
-    background-color: aliceblue;
-}
-  
-button {
-    margin-top: 30px;
-    padding: 15px;
-    width: 250px;  
-    background-color: pink;
-    color: red;
-    border-color: red;
-    border-radius: 5px;
-    font-size: 20px;
-  }
-  
-button:hover {
-    background-color: red;
-    color: pink;
-  }
-
