--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,8 @@ button:hover {
   body {
     width: 95vw;
     height: 75vh; 
-    margin: 20px;
-    display: flex;
-    justify-content:center;
-    padding: 0;  
+    margin: 10px;
+    padding: 0px;  
   }
 
   button {
